<resources>
    <string name="app_name">Better French TTS Demo</string>
</resources>
